--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webb",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://artakpoghosyan1.github.io/webb",
+  "homepage": "https://artakpoghosyan1.github.io/speedType",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
